[package]
name = "datafusion-table-providers-duckdb"
version = { workspace = true }
readme = { workspace = true }
edition = { workspace = true }
repository = { workspace = true }
license = { workspace = true }
description = "DataFusion duckdb table provider"

[dependencies]
arrow = { workspace = true }
arrow-schema = { workspace = true }
async-stream = "0.3"
async-trait = "0.1"
byte-unit = "5.2"
datafusion = { workspace = true, default-features = false, features = ["sql"] }
datafusion-federation = { workspace = true, features = ["sql"], optional = true }
datafusion-table-providers-common = { workspace = true }
duckdb = { workspace = true, features = ["bundled", "r2d2", "vtab", "vtab-arrow", "appender-arrow"] }
dyn-clone = "1.0"
futures = "0.3"
itertools = "0.14"
r2d2 = "0.8"
rand = { version = "0.10" }
sea-query = { version = "1.0.0", features = ["backend-sqlite", "with-rust_decimal", "with-bigdecimal", "with-time", "with-chrono"] }
secrecy = "0.10"
snafu = "0.9"
tokio = { version = "1.52", features = ["macros", "fs"] }
tracing = "0.1"
uuid = { version = "1.18" }

[features]
default = ["federation"]
federation = ["dep:datafusion-federation", "datafusion-table-providers-common/federation"]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
