[package]
name = "datafusion-table-providers-flightsql"
version = { workspace = true }
readme = { workspace = true }
edition = { workspace = true }
repository = { workspace = true }
license = { workspace = true }
description = "DataFusion flight table provider"

[dependencies]
arrow = { workspace = true }
arrow-flight = { workspace = true, features = ["flight-sql-experimental", "tls-ring"] }
async-trait = "0.1"
bytes = "1.11"
datafusion = { workspace = true, default-features = false, features = ["sql", "serde"] }
datafusion-federation = { workspace = true, features = ["sql"], optional = true }
datafusion-proto = { workspace = true }
datafusion-table-providers-common = { workspace = true }
futures = "0.3"
prost = "=0.14.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
snafu = "0.9"
tokio = { version = "1.52", features = ["macros", "fs"] }
tonic = { version = "0.14", features = ["tls-native-roots", "tls-webpki-roots"] }
tracing = "0.1"

[features]
default = []
federation = ["dep:datafusion-federation", "datafusion-table-providers-common/federation"]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
