[package]
name = "datafusion-table-providers-mysql"
version = { workspace = true }
readme = { workspace = true }
edition = { workspace = true }
repository = { workspace = true }
license = { workspace = true }
description = "DataFusion mysql table provider"

[dependencies]
arrow = { workspace = true }
async-stream = "0.3"
async-trait = "0.1"
bigdecimal = "0.4"
chrono = "0.4.44"
datafusion = { workspace = true, default-features = false, features = ["sql"] }
datafusion-federation = { workspace = true, features = ["sql"], optional = true }
datafusion-table-providers-common = { workspace = true }
futures = "0.3"
mysql_async = { version = "0.36", features = ["native-tls-tls", "chrono", "time", "bigdecimal"] }
num-bigint = "0.5"
sea-query = { version = "1.0.0", features = ["backend-mysql", "with-rust_decimal", "with-bigdecimal", "with-time", "with-chrono"] }
secrecy = "0.10"
snafu = "0.9"
time = "0.3"
tokio = { version = "1.52", features = ["macros", "fs"] }
tracing = "0.1"
url = "2.5"

[features]
default = ["federation"]
federation = ["dep:datafusion-federation", "datafusion-table-providers-common/federation"]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
